// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenuItem to match snapshot [full props] 1`] = `
<DocumentFragment>
  <button
    class="dropdown-item px-3 py-2 d-flex align-items-center justify-content-between test dropdown-item"
    role="menuitem"
    tabindex="0"
    type="button"
  >
    <a
      href="#"
    >
      Item
    </a>
    <i
      aria-hidden="true"
    >
      <svg
        class="d-block"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
        />
      </svg>
    </i>
  </button>
</DocumentFragment>
`;

exports[`DropdownMenuItem to match snapshot 1`] = `
<DocumentFragment>
  <button
    class="dropdown-item px-3 py-2 d-flex align-items-center justify-content-between dropdown-item"
    role="menuitem"
    tabindex="0"
    type="button"
  >
    <a
      href="#"
    >
      Item
    </a>
  </button>
</DocumentFragment>
`;
